[gd_scene load_steps=17 format=2]

[ext_resource path="res://Game/Scripts/Main/Root.gd" type="Script" id=1]
[ext_resource path="res://Game/Scenes/Main/Docks/Card Dock.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Scenes/Main/HUDElements/CurrentTurnGuide.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Assets/Images/Experimental/Blue.png" type="Texture" id=4]
[ext_resource path="res://Game/Scenes/Main/HUDElements/MonsterAttackMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/Scenes/Main/HUDElements/CardDisplay.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game/Scenes/Main/InGameMenus/GetLocationDockFromUserMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Game/Scenes/Main/Docks/LocationCardDock.tscn" type="PackedScene" id=8]
[ext_resource path="res://Game/Scenes/Main/Other/CameraController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Game/Scenes/Main/InGameMenus/VictoryMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://Game/Scenes/Main/HUDElements/TurnTransitionMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://Game/Scenes/Main/HUDElements/ActiveEffectsBrowserMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://Game/Scenes/Main/InGameMenus/FullScreenInGameMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://Game/Scenes/Main/HUDElements/InGameMenu.tscn" type="PackedScene" id=14]
[ext_resource path="res://Game/Scenes/Main/InGameMenus/CardActivationScreen.tscn" type="PackedScene" id=15]
[ext_resource path="res://Game/Scenes/Main/HUDElements/HelpButton.tscn" type="PackedScene" id=16]

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="BattleFieldBackground" type="Sprite" parent="."]
position = Vector2( 209.773, -175.871 )
scale = Vector2( 37.4879, 24.5201 )
texture = ExtResource( 4 )

[node name="Controller" parent="." instance=ExtResource( 9 )]
position = Vector2( 7.44879, 3.39661 )

[node name="Dock" parent="." instance=ExtResource( 2 )]
position = Vector2( -219.768, 81.4991 )

[node name="LocationDock1" parent="." instance=ExtResource( 8 )]
position = Vector2( -254.436, -85.4502 )

[node name="LocationDock2" parent="." instance=ExtResource( 8 )]
position = Vector2( 143.635, -83.1709 )

[node name="LocationDock3" parent="." instance=ExtResource( 8 )]
position = Vector2( 537.613, -76.2338 )

[node name="LocationDock4" parent="." instance=ExtResource( 8 )]
position = Vector2( -260.667, -357.21 )

[node name="LocationDock5" parent="." instance=ExtResource( 8 )]
position = Vector2( 146.077, -354.932 )

[node name="LocationDock6" parent="." instance=ExtResource( 8 )]
position = Vector2( 546.048, -360.371 )

[node name="LocationDock7" parent="." instance=ExtResource( 8 )]
position = Vector2( -255.782, -633.964 )

[node name="LocationDock8" parent="." instance=ExtResource( 8 )]
position = Vector2( 144.744, -645.006 )

[node name="LocationDock9" parent="." instance=ExtResource( 8 )]
position = Vector2( 549.434, -643.672 )

[node name="End Phase" type="Button" parent="."]
margin_left = 561.0
margin_top = 110.0
margin_right = 774.0
margin_bottom = 270.0
text = "End Phase"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VictoryScreen" parent="." instance=ExtResource( 10 )]
margin_left = 1032.56
margin_top = 636.565
margin_right = 1032.56
margin_bottom = 636.565

[node name="TurnGuide" parent="." instance=ExtResource( 3 )]

[node name="TopRightCornerMenu" parent="." instance=ExtResource( 14 )]

[node name="Display" parent="." instance=ExtResource( 6 )]

[node name="TurnTransitionMenu" parent="." instance=ExtResource( 11 )]

[node name="ActiveEffectsMenu" parent="." instance=ExtResource( 12 )]

[node name="AttackMenu" parent="." instance=ExtResource( 5 )]

[node name="StrategyCardMenu" parent="." instance=ExtResource( 7 )]

[node name="GameMusic" type="AudioStreamPlayer" parent="."]

[node name="FullScreenInGameMenu" parent="." instance=ExtResource( 13 )]

[node name="CardActivationScreen" parent="." instance=ExtResource( 15 )]

[node name="HelpButton" parent="." instance=ExtResource( 16 )]
[connection signal="pressed" from="End Phase" to="." method="_on_End_Phase_pressed"]
